[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openscad_runner"
version = "1.2.5"
license = "MIT"
authors = [
  { name="Revar Desmera", email="revarbat@gmail.com" },
]
maintainers = [
  { name="Revar Desmera", email="revarbat@gmail.com" },
]
description = "A Python library to interface with the OpenSCAD app."
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["openscad", "interface"]
dependencies = [
    "pillow>=12.1.1",
    "pygifsicle>=1.0.2",
    "apng>=0.3.4",
]

[project.urls]
"Homepage" = "https://github.com/BelfrySCAD/openscad_runner"
"Repository" = "https://github.com/BelfrySCAD/openscad_runner"
"Bug Tracker" = "https://github.com/BelfrySCAD/openscad_runner/issues"
"Releases" = "https://github.com/BelfrySCAD/openscad_runner/releases"
"Usage" = "https://github.com/BelfrySCAD/openscad_runner/README.rst"
"Documentation" = "https://github.com/BelfrySCAD/openscad_runner/README.rst"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
